--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
     "mysql2": "^3.2.0",
+    "sendmail": "^1.6.1",
     "sequelize": "^6.29.3"
   }
 }
