--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "sendmail": "^1.6.1",
     "sequelize": "^6.29.3"
   }
