--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "sendmail": "^1.6.1",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "uuid": "^9.0.0"
   }
 }
